--- a/app/index.html
+++ b/app/index.html
@@ -28,14 +28,44 @@
 
     <div class="row">
       <div class="col-md-6">
-        <span >Total Transactions <span class="badge" id="transaction_number">0</span></span>
+        <h3>Overall</h3>
+        <table class="table">
+          <tr><th>Ico starts </th><td><span class="" id="ico_starts"></span></td></tr>
+          <tr><th>Ico ends </th><td><span class="" id="ico_ends">0</span></td></tr>
+          <tr><th>duration </th><td><span class="" id="duration">0</span></td></tr>
+          <tr><th>currency raised </th><td><span class="" id="currency_raised">0</span></td></tr>
+          <tr><th>currency raised </th><td><span class="" id="currency_raised_euro">0</span></td></tr>
+          <tr><th>Tokens created </th><td><span class="" id="tokens_created">0</span></td></tr>
+          <tr><th>Number of investors </th><td><span class="" id="number_of_investors">0</span></td></tr>
+          <tr><th>Average investment size in currency) </th><td><span class="badge" id="agv_investment_currency">0</span></td></tr>
+          <tr><th>Average investment size in Tokens) </th><td><span class="badge" id="agv_investment_tokens">0</span></td></tr>
+        </table>
+
         <br/>
         <a href="#" id="download_csv">Download csv file</a>
 
       </div>
       <div class="col-md-6">
-        <span>Total people who invest more than one time <span class="badge" id="duplicated_tx">0</span></span>
-        <br/>
+        <h3>Investors</h3>
+        <table class="table">
+          <tr><th>Number of investors > 100k EUR </th><td><span class="" id="investors_gk100">0</span></td></tr>
+          <tr><th>Number of investors > 5 – 100k EUR </th><td><span class="" id="investors_5100k">0</span></td></tr>
+          <tr><th>Number of investors < 5k EUR </th><td><span class="" id="investors_l5k">0</span></td></tr>
+          <tr><th>Number of investors that invested more than once </th><td><span class="" id="investors_more_once">0</span></td></tr>
+        </table>
+        <h3>Transactions</h3>
+        <table class="table">
+          <tr><th>Number of transactions </th><td><span class="" id="transaction_number">0</span></td></tr>
+          <tr><th>Maximum investment (currency/Tokens)</th><td><span class="" id="max_investment">0</span></td></tr>
+          <tr><th>Minimum transactions </th><td><span class="" id="min_investment">0</span></td></tr>
+        </table>
+
+        <h3>Time</h3>
+        <table class="table">
+          <tr><th>Time</th><td><span id="time"></span></td></tr>
+          <tr><th>Ether/Euro</th><td><span id="ether_euro"></span></td></tr>
+
+        </table>
         <button id="charts" href="#">Charts</button>
       </div>
     </div>
