--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,9 @@
       </select>
 
     </div>
-
+  <div class="row">
+    <textarea id="status"></textarea>
+  </div>
     <div class="row">
       <div class="col-md-6">
         <h3>Overall</h3>
